Update Plash and Main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,17 @@
         android:theme="@style/Theme.TikTokApp">
         <activity
             android:name=".presentation.SplashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.activities.PlashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".presentation.MainActivity"
+            android:exported="false">
+
         </activity>
     </application>
 
