--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,9 @@ dependencies {
     def nav_version = "2.5.0"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+
+    //domain phone
+
+    implementation 'com.hbb20:ccp:2.6.0'
+
 }
